--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=7.3",
-        "laravel/framework": ">=5.8",
+        "laravel/framework": "7.22.4",
         "swaggest/json-schema": "^0.12.29"
     },
     "require-dev": {
